--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "yourresearchhub",
   "version": "0.1.0",
   "private": true,
-  "proxy":"http://localhost:8000",
-  
+  "proxy": "http://localhost:8000",
   "dependencies": {
     "@emailjs/browser": "^4.1.0",
     "@emotion/react": "^11.11.4",
@@ -13,8 +12,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
-    "helmet": "^7.1.0",
     "emailjs": "^4.0.3",
+    "helmet": "^7.1.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -46,7 +46,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-    
   },
   "devDependencies": {
     "tailwindcss": "^3.4.1"
