--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "helmet": "^7.1.0",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
+    "react-chat-engine-pretty": "^0.1.8",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
